@@ -28,10 +28,9 @@ import org.orekit.gnss.metric.messages.rtcm.msm.headers.RtcmMsmSignalId;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.RtcmMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 class Rtcm1087Test {
-
-    private double eps = 1.0e-13;
 
     private EncodedMessage message;
 
@@ -84,8 +83,13 @@ class Rtcm1087Test {
 
     @Test
     void testPerfectValue() {
-        final Rtcm1087 rtcm1087 = (Rtcm1087) new RtcmMessagesParser(messages, DataContext.getDefault().getTimeScales())
-                .parse(message, false);
+        final DataContext   context  = DataContext.getDefault();
+        final Rtcm1087 rtcm1087 = (Rtcm1087) new RtcmMessagesParser(messages,
+                                                                    context.getTimeScales(),
+                                                                    context.getFrames().getEME2000(),
+                                                                    context.getFrames().getITRF(IERSConventions.IERS_2010,
+                                                                                                false)).
+                                       parse(message, false);
 
         // Verify header
         Assertions.assertEquals("4095", rtcm1087.getHeader().getReferenceStation());
@@ -110,20 +114,21 @@ class Rtcm1087Test {
         Assertions.assertEquals(rtcm1087.getHeader().getNumberOfCells(), cells.size());
 
         // Verify first cell sat data
-        Assertions.assertEquals(new SatInSystem("R13"), cells.get(0).getSatelliteData().getSatellite());
-        Assertions.assertEquals(0.076, cells.get(0).getSatelliteData().getIntMillisRoughRange(), eps);
-        Assertions.assertEquals(-2, cells.get(0).getSatelliteData().getExtendedSatelliteData());
-        Assertions.assertEquals(1.54296875e-4, cells.get(0).getSatelliteData().getModMillisRoughRange(), eps);
-        Assertions.assertEquals(594, cells.get(0).getSatelliteData().getRoughPhaserangeRate());
+        Assertions.assertEquals(new SatInSystem("R13"), cells.getFirst().getSatelliteData().getSatellite());
+        final double eps = 1.0e-13;
+        Assertions.assertEquals(0.076, cells.getFirst().getSatelliteData().getIntMillisRoughRange(), eps);
+        Assertions.assertEquals(-2, cells.getFirst().getSatelliteData().getExtendedSatelliteData());
+        Assertions.assertEquals(1.54296875e-4, cells.getFirst().getSatelliteData().getModMillisRoughRange(), eps);
+        Assertions.assertEquals(594, cells.getFirst().getSatelliteData().getRoughPhaserangeRate());
 
         // Verify first cell sig data
-        Assertions.assertEquals(RtcmMsmSignalId.GLO_1C, cells.get(0).getSignalData().getSignalId());
-        Assertions.assertEquals(-0.1815, cells.get(0).getSignalData().getFinePhaserangeRate(), eps);
-        Assertions.assertEquals(3.1985528767108917e-7, cells.get(0).getSignalData().getFinePseudorange(), eps);
-        Assertions.assertEquals(3.2307859510183334e-7, cells.get(0).getSignalData().getFinePhaserange(), eps);
-        Assertions.assertEquals(329, cells.get(0).getSignalData().getLockTimeIndicator());
-        Assertions.assertEquals(38.25, cells.get(0).getSignalData().getCnr(), eps);
-        Assertions.assertEquals(false, cells.get(0).getSignalData().getHalfCycleAmbiguityIndicator());
+        Assertions.assertEquals(RtcmMsmSignalId.GLO_1C, cells.getFirst().getSignalData().getSignalId());
+        Assertions.assertEquals(-0.1815, cells.getFirst().getSignalData().getFinePhaserangeRate(), eps);
+        Assertions.assertEquals(3.1985528767108917e-7, cells.getFirst().getSignalData().getFinePseudorange(), eps);
+        Assertions.assertEquals(3.2307859510183334e-7, cells.getFirst().getSignalData().getFinePhaserange(), eps);
+        Assertions.assertEquals(329, cells.getFirst().getSignalData().getLockTimeIndicator());
+        Assertions.assertEquals(38.25, cells.getFirst().getSignalData().getCnr(), eps);
+        Assertions.assertEquals(false, cells.getFirst().getSignalData().getHalfCycleAmbiguityIndicator());
 
         // Verify last cell sat data
         Assertions.assertEquals(new SatInSystem("R14"), cells.get(1).getSatelliteData().getSatellite());
