@@ -21,6 +21,7 @@ import org.hipparchus.analysis.differentiation.FiniteDifferencesDifferentiator;
 import org.hipparchus.analysis.differentiation.Gradient;
 import org.hipparchus.analysis.differentiation.UnivariateDerivative1;
 import org.hipparchus.analysis.differentiation.UnivariateDifferentiableFunction;
+import org.hipparchus.linear.MatrixUtils;
 import org.hipparchus.linear.RealMatrix;
 import org.hipparchus.util.FastMath;
 import org.junit.jupiter.api.Assertions;
@@ -35,15 +36,20 @@ import org.orekit.orbits.PositionAngleType;
 import org.orekit.propagation.FieldSpacecraftState;
 import org.orekit.propagation.MatricesHarvester;
 import org.orekit.propagation.SpacecraftState;
-import org.orekit.propagation.analytical.gnss.data.CommonGnssData;
+import org.orekit.propagation.ToleranceProvider;
 import org.orekit.propagation.analytical.gnss.data.GNSSOrbitalElements;
+import org.orekit.propagation.analytical.gnss.data.GNSSOrbitalElementsFactory;
 import org.orekit.propagation.analytical.gnss.data.GPSLegacyNavigationMessage;
+import org.orekit.propagation.analytical.gnss.data.GPSLegacyNavigationMessageFactory;
 import org.orekit.propagation.analytical.gnss.data.GalileoNavigationMessage;
+import org.orekit.propagation.analytical.gnss.data.GalileoNavigationMessageFactory;
+import org.orekit.propagation.analytical.gnss.data.NonKeplerianDriversFactory;
 import org.orekit.time.AbsoluteDate;
+import org.orekit.time.GNSSDate;
 import org.orekit.utils.DoubleArrayDictionary;
-import org.orekit.utils.FieldPVCoordinates;
 import org.orekit.utils.IERSConventions;
 import org.orekit.utils.ParameterDriver;
+import org.orekit.utils.TimeStampedFieldPVCoordinates;
 
 import java.util.function.BiConsumer;
 import java.util.function.ToDoubleFunction;
@@ -51,134 +57,148 @@ import java.util.function.ToDoubleFunction;
 class GnssGradientConverterTest {
 
     private DataContext context;
-    private GNSSPropagator propagator;
+    private GNSSPropagator<GalileoNavigationMessage> propagator;
 
     @DefaultDataContext
     @BeforeEach
     public void setUp() {
         Utils.setDataRoot("regular-data");
         context = DataContext.getDefault();
-        final GalileoNavigationMessage goe = new GalileoNavigationMessage(context.getTimeScales(),
-                                                                          SatelliteSystem.GALILEO,
-                                                                          GalileoNavigationMessage.FNAV);
-        goe.setPRN(4);
-        goe.setWeek(1024);
-        goe.setTime(293400.0);
-        goe.setSqrtA(5440.602949142456);
-        goe.setDeltaN0(3.7394414770330066E-9);
-        goe.setE(2.4088891223073006E-4);
-        goe.setI0(0.9531656087278083);
-        goe.setIDot(-2.36081262303612E-10);
-        goe.setOmega0(-0.36639513583951266);
-        goe.setOmegaDot(-5.7695260382035525E-9);
-        goe.setPa(-1.6870064194345724);
-        goe.setM0(-0.38716557650888);
-        goe.setCuc(-8.903443813323975E-7);
-        goe.setCus(6.61797821521759E-6);
-        goe.setCrc(194.0625);
-        goe.setCrs(-18.78125);
-        goe.setCic(3.166496753692627E-8);
-        goe.setCis(-1.862645149230957E-8);
-        propagator = new GNSSPropagatorBuilder(goe,
-                                               context.getFrames().getEME2000(),
-                                               context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
-                     buildPropagator();
+        final GalileoNavigationMessageFactory factory =
+            new GalileoNavigationMessageFactory(context.getTimeScales(),
+                                                SatelliteSystem.GALILEO,
+                                                GalileoNavigationMessage.FNAV,
+                                                context.getFrames().getEME2000(),
+                                                context.getFrames().getITRF(IERSConventions.IERS_2010, false));
+        factory.setPrn(4);
+        factory.setTimeOfEphemeris(new GNSSDate(1024, 293400.0, SatelliteSystem.GALILEO));
+        final double sqrtA = 5440.602949142456;
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.SEMI_MAJOR_AXIS).setValue(sqrtA * sqrtA);
+        factory.getDeltaN0Driver().setValue(3.7394414770330066E-9);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.ECCENTRICITY).setValue(2.4088891223073006E-4);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.INCLINATION).setValue(0.9531656087278083);
+        factory.getIDotDriver().setValue(-2.36081262303612E-10);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.NODE_LONGITUDE).setValue(-0.36639513583951266);
+        factory.getOmegaDotDriver().setValue(-5.7695260382035525E-9);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.ARGUMENT_OF_PERIAPSIS).setValue(-1.6870064194345724);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.MEAN_ANOMALY).setValue(-0.38716557650888);
+        factory.getCucDriver().setValue(-8.903443813323975E-7);
+        factory.getCusDriver().setValue(6.61797821521759E-6);
+        factory.getCrcDriver().setValue(194.0625);
+        factory.getCrsDriver().setValue(-18.78125);
+        factory.getCicDriver().setValue(3.166496753692627E-8);
+        factory.getCisDriver().setValue(-1.862645149230957E-8);
+        factory.setTimeOfClock(factory.getTimeOfEphemeris());
+        factory.setTransmissionTime(factory.getTimeOfEphemeris());
+        propagator = new GNSSPropagator<>(factory);
     }
 
     @Test
     void testInitialStateStmNoSelectedParameters() {
-        final FieldGnssPropagator<Gradient> gPropagator = new GnssGradientConverter(propagator).getPropagator();
-        Assertions.assertEquals(12, gPropagator.getParametersDrivers().size());
+        GnssGradientConverter<GalileoNavigationMessage> converter = new GnssGradientConverter<>(propagator);
+        final FieldGnssPropagator<Gradient, GalileoNavigationMessage> gPropagator = converter.getPropagator();
+        Assertions.assertEquals(15, gPropagator.getParametersDrivers().size());
         Assertions.assertEquals(0, gPropagator.getParametersDrivers().stream().filter(ParameterDriver::isSelected).count());
-        Assertions.assertEquals(6, gPropagator.getInitialState().getOrbit().getA().getFreeParameters());
-        checkUnitaryInitialSTM(gPropagator.getInitialState());
+        Assertions.assertEquals(6, gPropagator.getBaseInitialState().getOrbit().getA().getFreeParameters());
+        checkInitialStmIsIdentity(gPropagator.getBaseInitialState());
     }
 
     @Test
     void testInitialStateStmAllParametersSelected() {
-        propagator.getOrbitalElements().getParametersDrivers().forEach(p -> p.setSelected(true));
-        final FieldGnssPropagator<Gradient> gPropagator = new GnssGradientConverter(propagator).getPropagator();
-        Assertions.assertEquals(12, gPropagator.getParametersDrivers().size());
-        Assertions.assertEquals(12, gPropagator.getParametersDrivers().stream().filter(ParameterDriver::isSelected).count());
-        Assertions.assertEquals(18, gPropagator.getInitialState().getOrbit().getA().getFreeParameters());
-        checkUnitaryInitialSTM(gPropagator.getInitialState());
+        propagator.getParametersDrivers().forEach(p -> p.setSelected(true));
+        GnssGradientConverter<GalileoNavigationMessage> converter = new GnssGradientConverter<>(propagator);
+        final FieldGnssPropagator<Gradient, GalileoNavigationMessage> gPropagator = converter.getPropagator();
+        Assertions.assertEquals(15, gPropagator.getParametersDrivers().size());
+        Assertions.assertEquals(15, gPropagator.getParametersDrivers().stream().filter(ParameterDriver::isSelected).count());
+        Assertions.assertEquals(21, gPropagator.getBaseInitialState().getOrbit().getA().getFreeParameters());
+        checkInitialStmIsIdentity(gPropagator.getBaseInitialState());
+    }
+
+    @Test
+    void testInitialJacobianVsBuilderParametersIsNotUnitary() {
+        // dY0/dB0 is the change of representation between the GNSS orbital elements the
+        // builder holds and the Cartesian state the propagator produces. Unlike the state
+        // transition matrix at dt = 0, it is legitimately far from the identity: this is
+        // where the non-Keplerian elements and the body-fixed node longitude show up.
+        final MatricesHarvester harvester = propagator.setupMatricesComputation("stm", null, null);
+        final RealMatrix dY0dB0 = harvester.getStateJacobianVsBuilderParameters(propagator.getBaseInitialState());
+        Assertions.assertEquals(6, dY0dB0.getRowDimension());
+        Assertions.assertEquals(6, dY0dB0.getColumnDimension());
+        final RealMatrix identity = MatrixUtils.createRealIdentityMatrix(6);
+        Assertions.assertTrue(dY0dB0.subtract(identity).getNorm1() > 1.0e6,
+                              "dY0/dB0 is expected to be far from the identity matrix");
     }
 
     @Test
     void testStmAndJacobian() {
         // Initial GPS orbital elements (Ref: IGS)
-        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(DataContext.getDefault().getTimeScales(),
-                                                                              SatelliteSystem.GPS,
-                                                                              GPSLegacyNavigationMessage.LNAV);
-        goe.setPRN(7);
-        goe.setWeek(0);
-        goe.setTime(288000);
-        goe.setSqrtA(5153.599830627441);
-        goe.setE(0.012442796607501805);
-        goe.setDeltaN0(4.419469802942352E-9);
-        goe.setI0(0.9558937988021613);
-        goe.setIDot(-2.4608167886110235E-10);
-        goe.setOmega0(1.0479401362158658);
-        goe.setOmegaDot(-7.967117576712062E-9);
-        goe.setPa(-2.4719019944000538);
-        goe.setM0(-1.0899023379614294);
-        goe.setCuc(4.3995678424835205E-6);
-        goe.setCus(1.002475619316101E-5);
-        goe.setCrc(183.40625);
-        goe.setCrs(87.03125);
-        goe.setCic(3.203749656677246E-7);
-        goe.setCis(4.0978193283081055E-8);
-        GNSSPropagator propagator = goe.getPropagator(context.getFrames().getEME2000(),
-                                                      context.getFrames().getITRF(IERSConventions.IERS_2010, true));
+        final GPSLegacyNavigationMessageFactory factory =
+            new GPSLegacyNavigationMessageFactory(context.getTimeScales(), SatelliteSystem.GPS,
+                                                  GPSLegacyNavigationMessage.LNAV,
+                                                  context.getFrames().getEME2000(),
+                                                  context.getFrames().getITRF(IERSConventions.IERS_2010, false));
+        factory.setPrn(7);
+        factory.setTimeOfEphemeris(new GNSSDate(0, 288000, SatelliteSystem.GPS));
+        final double sqrtA = 5153.599830627441;
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.SEMI_MAJOR_AXIS).setValue(sqrtA * sqrtA);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.ECCENTRICITY).setValue(0.012442796607501805);
+        factory.getDeltaN0Driver().setValue(4.419469802942352E-9);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.INCLINATION).setValue(0.9558937988021613);
+        factory.getIDotDriver().setValue(-2.4608167886110235E-10);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.NODE_LONGITUDE).setValue(1.0479401362158658);
+        factory.getOmegaDotDriver().setValue(-7.967117576712062E-9);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.ARGUMENT_OF_PERIAPSIS).setValue(-2.4719019944000538);
+        factory.getOrbitalParametersDrivers().findByName(GNSSOrbitalElementsFactory.MEAN_ANOMALY).setValue(-1.0899023379614294);
+        factory.getCucDriver().setValue(4.3995678424835205E-6);
+        factory.getCusDriver().setValue(1.002475619316101E-5);
+        factory.getCrcDriver().setValue(183.40625);
+        factory.getCrsDriver().setValue(87.03125);
+        factory.getCicDriver().setValue(3.203749656677246E-7);
+        factory.getCisDriver().setValue(4.0978193283081055E-8);
+        factory.setTimeOfClock(factory.getTimeOfEphemeris());
+        factory.setTransmissionTime(factory.getTimeOfEphemeris());
+        GNSSPropagator<GPSLegacyNavigationMessage> propagator = new GNSSPropagator<>(factory);
 
         // we want to compute the partial derivatives with respect to Crs and Crc parameters
-        Assertions.assertEquals(12, propagator.getOrbitalElements().getParameters().length);
-        propagator.getOrbitalElements().getParameterDriver(CommonGnssData.RADIUS_SINE).setSelected(true);
-        propagator.getOrbitalElements().getParameterDriver(CommonGnssData.RADIUS_COSINE).setSelected(true);
+        Assertions.assertEquals(15, propagator.getParameters().length);
+        propagator.getParametersDrivers().get(NonKeplerianDriversFactory.CRS_INDEX).setSelected(true);
+        propagator.getParametersDrivers().get(NonKeplerianDriversFactory.CRC_INDEX).setSelected(true);
         final DoubleArrayDictionary initialJacobianColumns = new DoubleArrayDictionary();
-        initialJacobianColumns.put(CommonGnssData.RADIUS_SINE,   new double[6]);
-        initialJacobianColumns.put(CommonGnssData.RADIUS_COSINE, new double[6]);
+        initialJacobianColumns.put(NonKeplerianDriversFactory.RADIUS_SINE,   new double[6]);
+        initialJacobianColumns.put(NonKeplerianDriversFactory.RADIUS_COSINE, new double[6]);
         final MatricesHarvester harvester = propagator.setupMatricesComputation("stm", null, initialJacobianColumns);
 
         // harvester sorts the columns lexicographically, and wraps them as SpanXxx##
         Assertions.assertEquals(2, harvester.getJacobiansColumnsNames().size());
-        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().getFirst());
-        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_SINE   + "0", harvester.getJacobiansColumnsNames().get(1));
+        Assertions.assertEquals("Span" + NonKeplerianDriversFactory.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().get(0));
+        Assertions.assertEquals("Span" + NonKeplerianDriversFactory.RADIUS_SINE   + "0", harvester.getJacobiansColumnsNames().get(1));
 
         // propagate orbit
-        final SpacecraftState state = propagator.propagate(goe.getDate().shiftedBy(3600.0));
+        final SpacecraftState state = propagator.propagate(factory.getDate().shiftedBy(3600.0));
 
         // check STM against finite differences
         final RealMatrix stm = harvester.getStateTransitionMatrix(state);
-        final double hP   = 100000.0;
-        final double hV   = 100.0;
-        double maxErrorPP = 0.0;
-        double maxErrorPV = 0.0;
-        double maxErrorVP = 0.0;
-        double maxErrorVV = 0.0;
+        OrbitType outType = harvester.getOrbitType();
+        Assertions.assertEquals(OrbitType.CARTESIAN, outType);
+        // The state transition matrix is now dC(t)/dC(t0): Cartesian rows *and* columns, so
+        // the finite differences reference is taken on the Cartesian initial coordinates too.
+        // The residual error is dominated by the finite differences themselves, not by the
+        // matrix: it decreases monotonically when the step grows (1.4e-5 at a 1 m scale down
+        // to 1.3e-9 at a 10 km scale), which is the signature of round-off, not of truncation.
+        final OrbitType inType = OrbitType.CARTESIAN;
+        final double [] steps = ToleranceProvider.
+                                getDefaultToleranceProvider(1000.0).
+                                getTolerances(state.getOrbit(), inType)[0];
+        double maxRelativeError = 0;
         for (int i = 0; i < 6; i++) {
             for (int j = 0; j < 6; j++) {
-                final double h = j < 3 ? hP : hV;
-                final double error = differentiate(propagator, state.getDate(), h, i, j) - stm.getEntry(i, j);
-                if (i < 3) {
-                    if (j < 3) {
-                        maxErrorPP = FastMath.max(maxErrorPP, error);
-                    } else {
-                        maxErrorPV = FastMath.max(maxErrorPV, error);
-                    }
-                } else {
-                    if (j < 3) {
-                        maxErrorVP = FastMath.max(maxErrorVP, error);
-                    } else {
-                        maxErrorVV = FastMath.max(maxErrorVV, error);
-                    }
-                }
+                final double finiteDifferences =
+                    differentiate(propagator, inType, outType, state.getDate(), steps[j], i, j);
+                final double relativeError = (finiteDifferences - stm.getEntry(i, j)) / finiteDifferences;
+                maxRelativeError = FastMath.max(maxRelativeError, FastMath.abs(relativeError));
             }
         }
-        Assertions.assertEquals(0.0, maxErrorPP, 6.5e-13);
-        Assertions.assertEquals(0.0, maxErrorPV, 8.2e-10);
-        Assertions.assertEquals(0.0, maxErrorVP, 8.4e-17);
-        Assertions.assertEquals(0.0, maxErrorVV, 3.8e-13);
+        Assertions.assertEquals(0.0, maxRelativeError, 2.0e-8);
 
         // check Jacobian against finite differences
         final RealMatrix jacobian = harvester.getParametersJacobian(state);
@@ -187,90 +207,101 @@ class GnssGradientConverterTest {
         double maxErrorV = 0.0;
         for (int i = 0; i < 6; i++) {
             for (int j = 0; j < 2; j++) {
-                final ToDoubleFunction<GNSSOrbitalElements<?>> getter;
-                final BiConsumer<GNSSOrbitalElements<?>, Double> setter;
+                final ToDoubleFunction<GNSSOrbitalElementsFactory<GPSLegacyNavigationMessage>> getter;
+                final BiConsumer<GNSSOrbitalElementsFactory<GPSLegacyNavigationMessage>, Double> setter;
                 if (j == 0) {
-                    getter = GNSSOrbitalElements::getCrc;
-                    setter = GNSSOrbitalElements::setCrc;
+                    getter = f      -> f.getCrcDriver().getValue();
+                    setter = (f, d) -> f.getCrcDriver().setValue(d);
                 } else {
-                    getter = GNSSOrbitalElements::getCrs;
-                    setter = GNSSOrbitalElements::setCrs;
+                    getter = f      -> f.getCrsDriver().getValue();
+                    setter = (f, d) -> f.getCrsDriver().setValue(d);
                 }
-                final double error = differentiate(propagator, state.getDate(), getter, setter, h, i) -
+                final double error = differentiate(factory, state.getDate(), getter, setter, h, i) -
                                      jacobian.getEntry(i, j);
                 if (i < 3) {
-                    maxErrorP = FastMath.max(maxErrorP, error);
+                    maxErrorP = FastMath.max(maxErrorP, FastMath.abs(error));
                 } else {
-                    maxErrorV = FastMath.max(maxErrorV, error);
+                    maxErrorV = FastMath.max(maxErrorV, FastMath.abs(error));
                 }
             }
         }
-        Assertions.assertEquals(0.0, maxErrorP, 6.9e-14);
-        Assertions.assertEquals(0.0, maxErrorV, 1.7e-17);
+        Assertions.assertEquals(0.0, maxErrorP, 4.7e-14);
+        Assertions.assertEquals(0.0, maxErrorV, 2.2e-17);
 
     }
 
-    private void checkUnitaryInitialSTM(final FieldSpacecraftState<Gradient> initialState) {
-        final FieldPVCoordinates<Gradient> pv0 = initialState.getPVCoordinates();
-        checkUnitary(pv0.getPosition().getX().getGradient(), 0, 4.0e-13, 2.0e-8);
-        checkUnitary(pv0.getPosition().getY().getGradient(), 1, 4.0e-13, 2.0e-8);
-        checkUnitary(pv0.getPosition().getZ().getGradient(), 2, 4.0e-13, 2.0e-8);
-        checkUnitary(pv0.getVelocity().getX().getGradient(), 3, 2.0e-12, 2.0e-12);
-        checkUnitary(pv0.getVelocity().getY().getGradient(), 4, 2.0e-12, 2.0e-12);
-        checkUnitary(pv0.getVelocity().getZ().getGradient(), 5, 2.0e-12, 2.0e-12);
-    }
-
-    private void checkUnitary(final double[] gradient, final int index,
-                              final double tolDiag, final double tolNonDiag) {
-        // beware! we intentionally check only the first 6 parameters
-        // the next ones correspond to non-Keplerian parameters,
-        // derivatives are NOT unitary for these extra parameters
-        for (int i = 0; i < 6; i++) {
-            if (i == index) {
-                // diagonal element
-                Assertions.assertEquals(1.0, gradient[i], tolDiag);
-            } else {
-                // non-diagonal element
-                Assertions.assertEquals(0.0, gradient[i], tolNonDiag);
+    /** Check the state transition matrix is the identity at the initial date.
+     * <p>
+     * The free variables of the converter are the six Cartesian coordinates of the initial
+     * state, so at dt = 0 the Cartesian gradients are the identity matrix. The residual is
+     * set by the convergence threshold of the Newton iteration that fits the GNSS elements
+     * to the state, not by any algebraic approximation, and lands around 2e-12. That is ten
+     * orders of magnitude tighter than the relaxed diagonal-only helper this replaces, which
+     * had to accept 0.01 to 0.10 back when the free variables were the Keplerian elements
+     * and this property did not hold at all.
+     * </p>
+     * @param initialState initial state of the gradient propagator
+     */
+    private void checkInitialStmIsIdentity(final FieldSpacecraftState<Gradient> initialState) {
+        final TimeStampedFieldPVCoordinates<Gradient> pv = initialState.getPVCoordinates();
+        final Gradient[] cartesian = new Gradient[] {
+            pv.getPosition().getX(), pv.getPosition().getY(), pv.getPosition().getZ(),
+            pv.getVelocity().getX(), pv.getVelocity().getY(), pv.getVelocity().getZ()
+        };
+        // the entries are dimensionally heterogeneous: the position versus velocity block is
+        // in s and the velocity versus position one in 1/s, so they are made comparable by
+        // scaling the velocity variables with the Keplerian period before a single bound is
+        // applied to all of them
+        final double period = initialState.getOrbit().getKeplerianPeriod().getReal();
+        for (int i = 0; i < 6; ++i) {
+            for (int j = 0; j < 6; ++j) {
+                final double scale = (i < 3 ? 1.0 : period) / (j < 3 ? 1.0 : period);
+                Assertions.assertEquals(i == j ? 1.0 : 0.0,
+                                        cartesian[i].getPartialDerivative(j) * scale,
+                                        5.0e-12);
             }
         }
     }
 
-    private double differentiate(final GNSSPropagator basePropagator, final AbsoluteDate target,
-                                 final double step, final int outIndex, final int inIndex) {
+    private <O extends GNSSOrbitalElements<O>> double differentiate(final GNSSPropagator<O> basePropagator,
+                                                                    final OrbitType inType, final OrbitType outType,
+                                                                    final AbsoluteDate target, final double step,
+                                                                    final int outIndex, final int inIndex) {
 
-        // function that converts a shift in one element of initial state (i.e. Px, Py, Pz, Vx, Vy, Vz)
+        // function that converts a shift in one element of initial state
         // into one element of propagated state
         final UnivariateFunction f = h -> {
 
             // get initial state
             final SpacecraftState original = basePropagator.getInitialState();
 
-            // shift element at specified index
+            // shift orbital element at specified index
             final double[] in = new double[6];
-            OrbitType.CARTESIAN.mapOrbitToArray(original.getOrbit(), PositionAngleType.MEAN, in, null);
+            inType.mapOrbitToArray(original.getOrbit(), PositionAngleType.MEAN, in, null);
             in[inIndex] += h;
 
             // build shifted initial state
             final SpacecraftState shiftedState =
-                new SpacecraftState(OrbitType.CARTESIAN.mapArrayToOrbit(in, null, PositionAngleType.MEAN,
-                                                                        original.getDate(),
-                                                                        original.getOrbit().getMu(), original.getFrame()),
+                new SpacecraftState(inType.mapArrayToOrbit(in, null, PositionAngleType.MEAN,
+                                                           original.getDate(),
+                                                           original.getOrbit().getMu(),
+                                                           original.getFrame()),
                                     original.getAttitude()).withMass(original.getMass());
 
             // build shifted propagator
-            final GNSSPropagator shiftedPropagator = new GNSSPropagator(shiftedState,
-                                                                        basePropagator.getOrbitalElements(),
-                                                                        basePropagator.getECEF(),
-                                                                        basePropagator.getAttitudeProvider(),
-                                                                        shiftedState.getMass());
+            final GNSSPropagator<O> shiftedPropagator =
+                new GNSSPropagator<>(shiftedState,
+                                     basePropagator.getOrbitalElements(),
+                                     basePropagator.getECEF(),
+                                     basePropagator.getAttitudeProvider(),
+                                     shiftedState.getMass());
 
             // propagated state
             final SpacecraftState outState = shiftedPropagator.propagate(target);
 
             // return desired coordinate
             final double[] out = new double[6];
-            OrbitType.CARTESIAN.mapOrbitToArray(outState.getOrbit(), PositionAngleType.MEAN, out, null);
+            outType.mapOrbitToArray(outState.getOrbit(), PositionAngleType.MEAN, out, null);
             return out[outIndex];
 
         };
@@ -282,26 +313,27 @@ class GnssGradientConverterTest {
 
     }
 
-    private double differentiate(final GNSSPropagator basePropagator, final AbsoluteDate target,
-                                 final ToDoubleFunction<GNSSOrbitalElements<?>> getter,
-                                 final BiConsumer<GNSSOrbitalElements<?>, Double> setter,
-                                 final double step, final int outIndex) {
+    private <O extends GNSSOrbitalElements<O>> double differentiate(final GNSSOrbitalElementsFactory<O> factory,
+                                                                    final AbsoluteDate target,
+                                                                    final ToDoubleFunction<GNSSOrbitalElementsFactory<O>> getter,
+                                                                    final BiConsumer<GNSSOrbitalElementsFactory<O>, Double> setter,
+                                                                    final double step, final int outIndex) {
 
         // function that converts a shift in one element of initial state (i.e Px, Py, Pz, Vx, Vy, Vz)
         // into one element of propagated state
         final UnivariateFunction f = h -> {
 
             // get initial parameter value
-            final double initialValue = getter.applyAsDouble(basePropagator.getOrbitalElements());
+            final double initialValue = getter.applyAsDouble(factory);
 
             // shift parameter
-            setter.accept(basePropagator.getOrbitalElements(), initialValue + h);
+            setter.accept(factory, initialValue + h);
 
             // propagated state
-            final SpacecraftState outState = basePropagator.propagate(target);
+            final SpacecraftState outState = new GNSSPropagator<>(factory).propagate(target);
 
             // reset parameter
-            setter.accept(basePropagator.getOrbitalElements(), initialValue);
+            setter.accept(factory, initialValue);
 
             // return desired coordinate
             final double[] out = new double[6];
